Update Notebook and Readme

--- a/notebooks/MealModel.ipynb
+++ b/notebooks/MealModel.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using the MixedMealModel\n",
+    "We will first load the MealModel package, and the Plots package for displaying figures. We also include the SampleData file, that contains a function to load the sample data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,6 +27,13 @@
     "using MealModel\n",
     "using Plots\n",
     "include(\"../data/SampleData.jl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can create the default model easily using this function."
    ]
   },
   {
@@ -41,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can simulate the model by computing the model output."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -60,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can visualize the resulting outputs with the plot function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -69,12 +98,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doing Parameter Estimation\n",
+    "For parameter estimation, we will need some more libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "using Optimization, OptimizationOptimJL, LineSearches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can load in the data."
    ]
   },
   {
@@ -98,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will select a single patient from this data of 5 patients."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -111,6 +162,13 @@
     "tg_data = trg[patient_id, :]\n",
     "nefa_data = nfa[patient_id, :];\n",
     "body_weight = bwg[patient_id];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To incorporate patient specific information, we can create a new model based on the data that we have loaded."
    ]
   },
   {
@@ -138,6 +196,13 @@
     "  fasting_NEFA = nefa_data[1],\n",
     "  timespan = (0., 720.)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now create a loss function and define out optimizer. We then perform a preselection on the initial latin hypercube samples to obtain the 10% of the best initial values."
    ]
   },
   {
@@ -176,30 +241,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8-element Vector{Float64}:\n",
-       "   0.045949999954950006\n",
-       "   0.42999999957\n",
-       "   4.1999999958\n",
-       "   0.009999999990000001\n",
-       "   0.38999999961000004\n",
-       " 330.59999974019996\n",
-       "   0.0410999999651\n",
-       "   0.17999999982"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "initial_parameters[:,1]"
+    "Run the optimization for each initial parameter set."
    ]
   },
   {
@@ -304,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combine the resulting parameters into a full parameter vector."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -314,6 +366,13 @@
     "\n",
     "# calculate the model outputs\n",
     "found_outputs = output(model, pars);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the result."
    ]
   },
   {
