--- a/notebooks/MealModel.ipynb
+++ b/notebooks/MealModel.ipynb
@@ -14,6 +14,25 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/TUe/MealModel`\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Pkg\n",
+    "Pkg.activate(\"..\")\n",
+    "Pkg.instantiate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "SampleData (generic function with 1 method)"
